[story/Q20-3] added few more test cases